--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -16,7 +16,9 @@
     margin-right: 80px;
     
 }
-
+.head{
+    background-image: url(public\images\college-banner-Cz0xylpt.png);
+}
 .header{
     background-color: rgb(0, 128, 255);
     text-align: right;
@@ -60,6 +62,9 @@ button{
     text-align: center;
     font-size: 1.2em;
     padding: 12px 30px;
+}
+#last-btn{
+    text-align: center;
 }
 .video{
     display: block;
